# freeauth

./: .gitignore  2pc  CMakeLists.txt  Dockerfile  README  README.md  build.sh  run.sh
DiStefano/: CMakeLists.txt  README.md
DiStefano/2pc/: CircuitSynthesis.cpp  CircuitSynthesis.hpp  DeriveCircuits.cpp
DiStefano/mta/: F2128MtA.inl
DiStefano/nodes/: Server.cpp  Server.hpp
DiStefano/ssl/: EmpWrapperAG2PC.cpp  EmpWrapperAG2PC.hpp  EmpWrapperAG2PC.t.cpp  Messaging.hpp  StatefulSocket.hpp  TLSSocket.cpp  TLSSocket.hpp  ThreePartyHandshake.cpp  ThreePartyHandshake.hpp  Util.hpp  Util.inl
FreeAuth/: LibNodeWrapperSMTP.cpp  LibThreePartyEncrypt.cpp  LibThreePartyEncrypt.h  TestSMTPProver.cpp  TestSMTPServer.cpp  TestSMTPVerifier.cpp  TestSingleCommitProver.cpp  TestSingleCommitVerifier.cpp  common.h
FreeAuth/ApplicationDemo/: compile_backend.sh  demo.vue  package.json  vue.config.js
FreeAuth/ApplicationDemo/public/: index.html
FreeAuth/ApplicationDemo/src/: main.js
FreeAuth/ApplicationDemo/src/components/: emailAuth.vue
FreeAuth/ApplicationDemo/src/router/: index.js
FreeAuth/ApplicationDemo/src/utils/: backend.js
FreeAuth/ApplicationDemo/src/views/Login/: index.vue
FreeAuth/StatementGeneration/: Cargo.toml
FreeAuth/StatementGeneration/src/: constrain.rs  main.rs
FreeAuth/TestCA/certs/: server.crt  verifier.crt
FreeAuth/TestCA/keys/: server.key
TestApplicationDemo/: compile_backend.sh  package-lock.json  package.json  vue.config.js
TestApplicationDemo/src/: App.vue
TestApplicationDemo/src/utils/: preload.js  request.js
TestApplicationDemo/src/views/Register/: index.vue
TestFreeAuth/: TestSMTPProver.cpp  TestSMTPServer.cpp  TestSMTPVerifier.cpp  TestSingleCommitProver.cpp  TestSingleCommitVerifier.cpp
TestFreeAuth/ApplicationDemo/: README.md  compile_backend.sh
TestFreeAuth/ApplicationDemo/src/: background.js
TestFreeAuth/ApplicationDemo/src/api/: register.js
TestFreeAuth/ApplicationDemo/src/components/: processDisplay.vue  showCredential.vue
TestFreeAuth/ApplicationDemo/src/utils/: vcode.js
TestFreeAuth/EnvironmentConfiguration/: run_20ms1Gbps.sh  run_4ms1Gbps.sh
TestFreeAuth/StatementGeneration/src/: constrain.rs
TestFreeAuth/TestCA/certs/: ca_root.crt
TestFreeAuth/TestCA/keys/: verifier.key
boringssl/ssl/: handshake_client.cc  internal.h  ssl_lib.cc  ssl_transcript.cc  tls13_both.cc  tls13_client.cc  tls13_enc.cc  tls_record.cc
boringssl/ssl/test/: settings_writer.cc
emp/emp-ag2pc/: CMakeLists.txt
emp/emp-ag2pc/emp-ag2pc/: fpre_ferret_cot.h
emp/emp-ag2pc/test/: CMakeLists.txt  abit.cpp  aes.cpp  amortized_2pc.cpp  sha256_aes.cpp  single_execution.h
emp/emp-ot/cmake/: emp-ot-config.cmake
emp/emp-ot/emp-ot/ferret/: constants.h
emp/emp-tool/: CMakeLists.txt
emp/emp-tool/emp-tool/utils/: block.h
